# MimicFlux

./: .env.example  .gitignore  LICENSE  README.md  prompts.txt  pyproject.toml  requirements.txt  run_pipeline.py  web_app.py
tests/: test_pipeline.py  test_run_generation.py
