[project]
name = "ai-test"
version = "0.2.0"
description = "Automated image generation pipeline using OpenRouter (style extraction + batch generation)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "openai>=1.51.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["automated_outputs", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
